# Silent-Speech-

./: .gitignore  README.md  gpu.py  ollama.py
slient-speech/: .gitignore  README.md  RL.md  bandit_state.json  corrections.json  improve.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup_autoavsr.sh  silent_speech.py
slient-speech/configs/: LRS3_V_WER19.1.ini  LRS3_V_WER19.1_fast.ini  LRS3_V_WER20.3_conformer.ini  multilingual_ar.ini  multilingual_es.ini  multilingual_fr.ini  multilingual_pt.ini  multilingual_zh.ini
slient-speech/espnet/asr/: asr_utils.py
slient-speech/espnet/nets/: ctc_prefix_score.py  e2e_asr_common.py
slient-speech/espnet/nets/pytorch_backend/: e2e_asr_transformer.py  e2e_asr_transformer_av.py  nets_utils.py
slient-speech/espnet/nets/pytorch_backend/backbones/: conv1d_extractor.py  conv3d_extractor.py
slient-speech/espnet/nets/pytorch_backend/transformer/: add_sos_eos.py  attention.py  convolution.py  decoder.py  decoder_layer.py  embedding.py  encoder.py  encoder_layer.py  label_smoothing_loss.py  layer_norm.py  mask.py  multi_layer_conv.py  optimizer.py  plot.py  positionwise_feed_forward.py  repeat.py  (+1 more)
slient-speech/espnet/utils/: fill_missing_args.py
slient-speech/hydra_configs/: default.yaml
slient-speech/multilingual/: __init__.py  languages.py  setup_models.py
slient-speech/pipelines/: model.py  pipeline.py
slient-speech/pipelines/detectors/mediapipe/: detector.py  video_process.py
slient-speech/pipelines/detectors/retinaface/: detector.py  video_process.py
slient-speech/pipelines/metrics/: measures.py
(+58 files in other folders)
