[project]
name = "slient-speech"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

# Force torch/torchvision/torchaudio to come from PyTorch's CUDA 12.4 wheel index.
# Without this, uv picks the CPU-only build from PyPI.
# RTX 4050 driver 581.83 supports CUDA 13.0 — fully backward-compatible with cu124.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
